--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,6 +15,7 @@ header {
   width: 100%;
   height: 69px;
   border-bottom: 1px solid seashell;
+  background-color: black;
 }
 .tea-cozy-logo {
   width: auto;
@@ -29,3 +30,19 @@ header {
     margin: 0px 5px;
     text-decoration: underline;
   }
+main {
+  display: flex;
+  height: 700px;
+  width: 1200px;
+  margin: 0 auto;
+  align-items: center;
+  background-image: url('../images/img-mission-background.jpg');
+  background-size: cover;
+}
+.our-mission {
+  text-align: center;
+  width: 100%;
+  height: auto;
+  background-color: black;
+
+}
